fix white space responsiveness

--- a/covid.css
+++ b/covid.css
@@ -11,6 +11,7 @@
 .footer {
     background-color: rgb(102, 101, 101);
     color:rgb(251, 255, 0);
+    width: 100%;
 }
 
 .container {
